--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+.wrapper {
+  max-width: 1128px;
+  margin: auto;
+  padding: 0 86px;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
