--- a/index.css
+++ b/index.css
@@ -63,6 +63,31 @@
   text-decoration: none;
 }
 
+.search {
+  display: flex;
+  gap: 5px;
+  position: relative;
+}
+
+.search::after {
+  content: "";
+  width: 281px;
+  height: 1px;
+  background: #517DAE;
+  position: absolute;
+  bottom: -2px;
+}
+
+.search__input {
+  border: none;
+  background: transparent;
+  outline: none;
+}
+
+.search__input::placeholder {
+  color: #FFF;
+}
+
 .wrapper {
   max-width: 1128px;
   margin: auto;
