feat: create price input component

--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .h1 {
   font-size: 28px;
 }
@@ -61,6 +62,37 @@
 
 .no-decoration {
   text-decoration: none;
+}
+
+.price__input {
+  padding: 13px 11px 13px 62px;
+  width: 59.5px;
+  border: 1px solid #D0D0D0;
+  outline: none;
+  position: relative;
+}
+
+.price__inputs-container::after, .price__inputs-container::before {
+  position: absolute;
+  top: calc(50% - 8px);
+  z-index: 1;
+  color: #484848;
+  font-size: 16px;
+}
+
+.price__inputs-container::before {
+  content: "от";
+  left: 11px;
+}
+
+.price__inputs-container::after {
+  content: "до";
+  left: 144px;
+}
+
+.price__inputs-container {
+  display: flex;
+  position: relative;
 }
 
 .search {
