feat: create styles for filters layout

--- a/index.css
+++ b/index.css
@@ -189,6 +189,19 @@
   padding: 0 86px;
 }
 
+.filters {
+  display: flex;
+  gap: 14px;
+  padding: 25px 0 23px 0;
+}
+
+.filters__price {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  margin-left: 13px;
+}
+
 .header {
   background: #265C9A;
 }
