--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
   'base/typography';
 
 @import 
+  'components/product',
   'components/price__input',
   'components/search',
   'components/filter',
