feat: create products list style

--- a/index.css
+++ b/index.css
@@ -305,6 +305,13 @@
   gap: 39px;
 }
 
+.products__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 39px;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
