--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@
 .product {
   display: flex;
   width: 240px;
-  max-height: 328px;
+  height: 329px;
   flex-direction: column;
   align-items: center;
   padding: 14px 20px;
@@ -132,6 +132,18 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+.product_big .product__price-text::before {
+  content: "4 400,00 руб.";
+  position: absolute;
+  top: -32px;
+  color: #989898;
+  font-family: "PT Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: line-through;
 }
 
 .price__input {
