--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -2,11 +2,19 @@
   background: $primary-color;
 }
 
+.header__wrapper {
+  height: 72px;
+  display: flex;
+  align-items: center;
+  padding-top: 1px;
+  width: 100%;
+}
+
 .header__info {
   display: flex;
-  padding: 21px 0;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .info__base {
@@ -17,10 +25,12 @@
 
 .nav {
   background: $secondary-color;
-  padding: 13px;
+  height: 45px;
+  padding-top: 1px;
 }
 
 .nav__wrapper {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -29,4 +39,9 @@
 .nav__links {
   display: flex;
   gap: 39px;
+}
+
+.trash {
+  display: flex;
+  gap: 9px;
 }
