--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -80,3 +80,42 @@
     text-decoration-line: line-through;
   }
 }
+
+@media screen and (max-width: $desktop-width) and (min-width: $tablet-big-width) {
+  .product__img {
+    width: 164px;
+    height: 164px;
+    padding: 16px 66px 12px 66px;
+  }
+  .product {
+    width: 294px;
+    height: 340px;
+    padding: 0 16px 19px 16px;
+  }
+  .product__text {
+    padding-bottom: 10px;
+  } 
+  .product_big {
+    flex-wrap: wrap;
+    width: 617.5px;
+    height: 312px;
+    padding: 31px 17px 16px 19px;
+    align-items: start;
+    .product__img {
+      width: 297px;
+      height: 297px;
+      padding: 0px 0 0 0;
+    }
+    .product__info {
+      height: 100%;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 2px 0 4px 18px;
+    }
+    .info__title {
+      gap: 4px;
+    }
+  }
+}
