--- a/scss/layouts/_filters.scss
+++ b/scss/layouts/_filters.scss
@@ -26,3 +26,15 @@
     display: none;
   }
 }
+
+@media screen and (max-width: $tablet-big-width) and (min-width: $tablet-small-width) {
+  .filters_mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px 0 14px 0;
+  }
+  .filters {
+    display: none;
+  }
+ }
