--- a/scss/layouts/_products.scss
+++ b/scss/layouts/_products.scss
@@ -16,3 +16,9 @@
     display: none;
   }
 }
+
+@media screen and (max-width: $tablet-small-width) and (min-width: $phone-width) {
+  .product:nth-child(n + 4) {
+    display: none;
+  }
+}
