feat: create script to open search

--- a/index.css
+++ b/index.css
@@ -419,6 +419,16 @@
   .search {
     padding-left: 40px;
   }
+  .search.active::after {
+    display: block;
+    width: 150px;
+  }
+  .search.active .search__input {
+    display: block;
+  }
+  .logo.inactive {
+    display: none;
+  }
 }
 .filter {
   width: 264px;
