--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -48,6 +48,10 @@
     padding-left: 40px;
   }
 
+  .search.active {
+    padding-left: 0;
+  }
+
   .search.active::after {
     display: block;
     width: 150px;
@@ -56,7 +60,7 @@
   .search.active .search__input {
     display: block;
   }
-  
+
   .logo.inactive {
     display: none;
   }
