--- a/scss/base/_hovers.scss
+++ b/scss/base/_hovers.scss
@@ -73,3 +73,15 @@
 .burger-menu:hover > .burger-icon > path{
   fill: $font-hover-color;
 }
+
+.search {
+  cursor: pointer;
+}
+
+.search > svg > path {
+  transition: 0.5s;
+}
+
+.search:hover > svg > path {
+  fill: $font-hover-color;
+}
