feat: create burger menu

--- a/index.css
+++ b/index.css
@@ -159,6 +159,52 @@
     font-size: 16px;
   }
 }
+.mobile-menu {
+  position: absolute;
+  width: 100%;
+  background: #265C9A;
+  top: 72px;
+  left: 0;
+}
+
+.mobile-menu .mobile-menu__wrapper {
+  margin: auto;
+  padding-bottom: 16px;
+}
+
+.mobile-menu__wrapper > li {
+  padding: 10px;
+  border-radius: 1px;
+  transition: 0.5s;
+}
+
+.mobile-menu__wrapper > li:hover {
+  color: #FFF;
+  background: #618CBF;
+}
+
+.mobile-menu__wrapper > li:hover > * {
+  color: #fff;
+}
+
+@media screen and (max-width: 1300px) and (min-width: 1024px) {
+  .mobile-menu__wrapper {
+    max-width: 984px;
+    padding: 0 20px;
+  }
+}
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .mobile-menu__wrapper {
+    max-width: 728px;
+    padding: 0 20px;
+  }
+}
+@media screen and (max-width: 768px) and (min-width: 320px) {
+  .mobile-menu__wrapper {
+    max-width: 280px;
+    padding: 0 20px;
+  }
+}
 .product__img {
   width: 160px;
   height: 160px;
