--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
   'base/typography';
 
 @import 
+  'components/modal',
   'components/mobile-menu',
   'components/product',
   'components/price__input',
